--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="d_option_four">D. Option four</string>
     <string name="submit">submit</string>
     <string name="question_number_1_1000">Question number 1: $1000</string>
+    <string name="congratulation">Congratulation!!!</string>
+    <string name="you_won">you won</string>
+    <string name="start_new_game">START NEW GAME</string>
+    <string name="new_player">NEW PLAYER</string>
+    <string name="millionaire">You become a millionaire.</string>
+    <string name="loosing_message">You only manage to win</string>
 </resources>
